Rewritten audit log extended filters

--- a/src/PrivateAdmin/src/app/administration/audit-log/filter/extended-filters/text-filter/text-filter.component.html
+++ b/src/PrivateAdmin/src/app/administration/audit-log/filter/extended-filters/text-filter/text-filter.component.html
@@ -2,9 +2,9 @@
     <h5>{{label}}</h5>
 
     <form class="row" [formGroup]="form">
-        <div class="col-2 d-flex align-items-center">Obsah textu</div>
+        <div class="col-md-3 d-flex align-items-center">Obsah textu</div>
 
-        <div class="col">
+        <div class="col-md">
             <input type="text" placeholder="Obsah textu" class="form-control" formControlName="text" />
         </div>
     </form>
