--- a/src/PrivateAdmin/src/app/administration/audit-log/filter/extended-filters/execution-filter/execution-filter.component.html
+++ b/src/PrivateAdmin/src/app/administration/audit-log/filter/extended-filters/execution-filter/execution-filter.component.html
@@ -3,29 +3,29 @@
 
     <form [formGroup]="form">
         <div class="row">
-            <div class="col-2 d-flex align-items-center">Název</div>
+            <div class="col-md-3 d-flex align-items-center">Název</div>
 
-            <div class="col">
+            <div class="col-md">
                 <input type="text" placeholder="Název" class="form-control" formControlName="name" />
             </div>
         </div>
 
         <div class="row mt-2">
-            <div class="col-2 d-flex align-items-center">Dokončeno úspěšně</div>
+            <div class="col-md-3 d-flex align-items-center">Dokončeno úspěšně</div>
 
-            <div class="col">
+            <div class="col-md">
                 <app-select [items]="wasSuccessItems" formControlName="wasSuccess"></app-select>
             </div>
         </div>
 
         <div class="row mt-2">
-            <div class="col-2 d-flex align-items-center">Doba trvání (ms)</div>
+            <div class="col-md-3 d-flex align-items-center">Doba trvání (ms)</div>
 
-            <div class="col">
+            <div class="col-md">
                 <input type="number" min="0" placeholder="Od" class="form-control" formControlName="durationFrom" />
             </div>
 
-            <div class="col">
+            <div class="col-md">
                 <input type="number" placeholder="Do" class="form-control" formControlName="durationTo" />
             </div>
         </div>
