--- a/src/PrivateAdmin/src/app/administration/audit-log/filter/extended-filters/message-deleted-filter/message-deleted-filter.component.html
+++ b/src/PrivateAdmin/src/app/administration/audit-log/filter/extended-filters/message-deleted-filter/message-deleted-filter.component.html
@@ -3,25 +3,25 @@
 
     <form [formGroup]="form">
         <div class="row mt-2">
-            <div class="col-2 d-flex align-items-center">Obsahuje embed</div>
+            <div class="col-md-3 d-flex align-items-center">Obsahuje embed</div>
 
-            <div class="col">
+            <div class="col-md">
                 <app-select [items]="containsEmbedItems" formControlName="containsEmbed"></app-select>
             </div>
         </div>
 
         <div class="row mt-2">
-            <div class="col-2 d-flex align-items-center">Zpráva obsahuje</div>
+            <div class="col-md-3 d-flex align-items-center">Zpráva obsahuje</div>
 
-            <div class="col">
+            <div class="col-md">
                 <input type="text" placeholder="Zpráva obsahuje" class="form-control" formControlName="contentContains" />
             </div>
         </div>
 
         <div class="row mt-2">
-            <div class="col-2 d-flex align-items-center">Autor zprávy</div>
+            <div class="col-md-3 d-flex align-items-center">Autor zprávy</div>
 
-            <div class="col">
+            <div class="col-md">
                 <app-search-input [searchSource]="'users'" formControlName="authorId"></app-search-input>
             </div>
         </div>
