--- a/src/PrivateAdmin/src/app/administration/audit-log/filter/filter.component.html
+++ b/src/PrivateAdmin/src/app/administration/audit-log/filter/filter.component.html
@@ -1,4 +1,5 @@
-<app-card [title]="'Vyhledávání'" [icon]="'fas fa-search'" [allowHideButton]="true">
+<app-card [title]="'Vyhledávání'" [icon]="'fas fa-search'" [allowHideButton]="true"
+    [footer]="allowExtendedFilters ? {template:extendedFilters, context:null} : null">
     <form [formGroup]="form">
         <div class="row">
             <div class="col form-group">
@@ -21,7 +22,8 @@
 
             <div class="col form-group">
                 <label>Uživatel</label>
-                <app-search-input [searchSource]="'users'" formControlName="processedUserIds" [isMultiSelect]="true" [guildId]="guildId"></app-search-input>
+                <app-search-input [searchSource]="'users'" formControlName="processedUserIds" [isMultiSelect]="true"
+                    [guildId]="guildId"></app-search-input>
             </div>
         </div>
 
@@ -45,23 +47,21 @@
             <div class="col form-group">
                 <label>Typy operací (k vynechání)</label>
                 <ng-select [bindValue]="'key'" [bindLabel]="'value'" [closeOnSelect]="false" [clearable]="true" [items]="types"
-                    [multiple]="true" [notFoundText]="'Nenalezen žádný typ'" [searchable]="true" formControlName="excludedTypes"></ng-select>
+                    [multiple]="true" [notFoundText]="'Nenalezen žádný typ'" [searchable]="true"
+                    formControlName="excludedTypes"></ng-select>
             </div>
         </div>
 
         <div class="row mt-3">
-            <div class="col-md d-flex flex-column">
+            <div class="col-md-3 d-flex flex-column">
                 <app-checkbox [id]="'ignore-bots'" formControlName="ignoreBots" [label]="'Ignorovat operace provedené boty'"></app-checkbox>
-                <app-checkbox [id]="'only-from-start'" formControlName="onlyFromStart" [label]="'Pouze záznamy od startu bota'"></app-checkbox>
+                <app-checkbox [id]="'only-from-start'" formControlName="onlyFromStart"
+                    [label]="'Pouze záznamy od startu bota'"></app-checkbox>
             </div>
 
             <div class="col-md d-flex flex-column">
-                <app-checkbox [id]="'only-with-files'" formControlName="onlyWithFiles" [label]="'Pouze záznamy obsahující soubory'"></app-checkbox>
-            </div>
-
-            <div class="col-md d-flex align-items-center justify-content-center">
-                <button *ngIf="allowExtendedFilters" class="btn btn-link" type="button" (click)="openExtendedFiltersModal()">Pokročilé
-                    vyhledávání</button>
+                <app-checkbox [id]="'only-with-files'" formControlName="onlyWithFiles"
+                    [label]="'Pouze záznamy obsahující soubory'"></app-checkbox>
             </div>
 
             <div class="col-md d-flex justify-content-end align-items-end">
@@ -71,3 +71,40 @@
         </div>
     </form>
 </app-card>
+
+<ng-template #extendedFilters>
+    <h5>Pokročilé vyhledávání</h5>
+
+    <div class="extended-filter-grid">
+        <app-text-filter [label]="'Informační zpráva'" [(ngModel)]="exFilters.info" (ngModelChange)="form.updateValueAndValidity()"
+            *ngIf="selectedTypes.includes(auditLogItemType.Info)"></app-text-filter>
+        <app-text-filter [label]="'Varování'" [(ngModel)]="exFilters.warning" (ngModelChange)="form.updateValueAndValidity()"
+            *ngIf="selectedTypes.includes(auditLogItemType.Warning)"></app-text-filter>
+        <app-text-filter [label]="'Chyba'" [(ngModel)]="exFilters.error" (ngModelChange)="form.updateValueAndValidity()"
+            *ngIf="selectedTypes.includes(auditLogItemType.Error)"></app-text-filter>
+        <app-execution-filter [label]="'Integrovaný příkaz'" [(ngModel)]="exFilters.interaction"
+            (ngModelChange)="form.updateValueAndValidity()" *ngIf="selectedTypes.includes(auditLogItemType.InteractionCommand)">
+        </app-execution-filter>
+        <app-execution-filter [label]="'Naplánovaná úloha'" [(ngModel)]="exFilters.job" (ngModelChange)="form.updateValueAndValidity()"
+            *ngIf="selectedTypes.includes(auditLogItemType.JobCompleted)"></app-execution-filter>
+        <app-api-request-filter [(ngModel)]="exFilters.api" (ngModelChange)="form.updateValueAndValidity()"
+            *ngIf="selectedTypes.includes(auditLogItemType.API)"></app-api-request-filter>
+        <app-target-id-filter [label]="'Vytvořena výjimka do kanálu'" [(ngModel)]="exFilters.overwriteCreated"
+            (ngModelChange)="form.updateValueAndValidity()" *ngIf="selectedTypes.includes(auditLogItemType.OverwriteCreated)">
+        </app-target-id-filter>
+        <app-target-id-filter [label]="'Smazána výjimka do kanálu'" [(ngModel)]="exFilters.overwriteDeleted"
+            (ngModelChange)="form.updateValueAndValidity()" *ngIf="selectedTypes.includes(auditLogItemType.OverwriteDeleted)">
+        </app-target-id-filter>
+        <app-target-id-filter [label]="'Upravena výjimka do kanálu'" [(ngModel)]="exFilters.overwriteUpdated"
+            (ngModelChange)="form.updateValueAndValidity()" *ngIf="selectedTypes.includes(auditLogItemType.OverwriteUpdated)">
+        </app-target-id-filter>
+        <app-target-id-filter [label]="'Upraven uživatel'" [(ngModel)]="exFilters.memberUpdated"
+            (ngModelChange)="form.updateValueAndValidity()" *ngIf="selectedTypes.includes(auditLogItemType.MemberUpdated)">
+        </app-target-id-filter>
+        <app-target-id-filter [label]="'Upraveny role uživatele'" [(ngModel)]="exFilters.memberRoleUpdated"
+            (ngModelChange)="form.updateValueAndValidity()" *ngIf="selectedTypes.includes(auditLogItemType.MemberRoleUpdated)">
+        </app-target-id-filter>
+        <app-message-deleted-filter [(ngModel)]="exFilters.messageDeleted" (ngModelChange)="form.updateValueAndValidity()"
+            *ngIf="selectedTypes.includes(auditLogItemType.MessageDeleted)"></app-message-deleted-filter>
+    </div>
+</ng-template>
