Integrated AuditLogService to private administration

--- a/src/PrivateAdmin/src/app/administration/audit-log/filter/extended-filters/execution-filter/execution-filter.component.html
+++ b/src/PrivateAdmin/src/app/administration/audit-log/filter/extended-filters/execution-filter/execution-filter.component.html
@@ -6,7 +6,7 @@
             <div class="col-md-3 d-flex align-items-center">Název</div>
 
             <div class="col-md">
-                <input type="text" placeholder="Název" class="form-control" formControlName="name" />
+                <input type="text" placeholder="Název" class="form-control" formControlName="actionName" />
             </div>
         </div>
 
