--- a/src/PrivateAdmin/src/app/administration/audit-log/filter/extended-filters/target-id-filter/target-id-filter.component.html
+++ b/src/PrivateAdmin/src/app/administration/audit-log/filter/extended-filters/target-id-filter/target-id-filter.component.html
@@ -5,7 +5,7 @@
         <div class="col-md-3 d-flex align-items-center">ID cíle</div>
 
         <div class="col-md">
-            <input type="text" placeholder="ID role/uživatele" class="form-control" formControlName="targetId">
+            <input type="text" placeholder="ID role/uživatele" class="form-control" formControlName="userId">
         </div>
     </form>
 </app-card>
