--- a/src/PrivateAdmin/src/app/administration/audit-log/filter/filter.component.html
+++ b/src/PrivateAdmin/src/app/administration/audit-log/filter/filter.component.html
@@ -4,10 +4,7 @@
         <div class="row">
             <div class="col form-group">
                 <label>ID záznamů (oddělovat čárkou)</label>
-                <input type="text" formControlName="ids" class="form-control" />
-                <small class="text-danger" *ngIf="form.invalid">
-                    <span *ngIf="form.get('ids').hasError('pattern')">Zadání obsahuje nepovolené znaky.</span>
-                </small>
+                <input type="text" formControlName="serializedIds" class="form-control" />
             </div>
 
             <div class="col form-group">
@@ -22,7 +19,7 @@
 
             <div class="col form-group">
                 <label>Uživatel</label>
-                <app-search-input [searchSource]="'users'" formControlName="processedUserIds" [isMultiSelect]="true"
+                <app-search-input [searchSource]="'users'" formControlName="userIds" [isMultiSelect]="true"
                     [guildId]="guildId"></app-search-input>
             </div>
         </div>
@@ -41,24 +38,17 @@
             <div class="col form-group">
                 <label>Typy operací (k zobrazení)</label>
                 <ng-select [bindValue]="'key'" [bindLabel]="'value'" [closeOnSelect]="false" [clearable]="true" [items]="types"
-                    [multiple]="true" [notFoundText]="'Nenalezen žádný typ'" [searchable]="true" formControlName="types"></ng-select>
+                    [multiple]="true" [notFoundText]="'Nenalezen žádný typ'" [searchable]="true" formControlName="showTypes"></ng-select>
             </div>
 
             <div class="col form-group">
                 <label>Typy operací (k vynechání)</label>
                 <ng-select [bindValue]="'key'" [bindLabel]="'value'" [closeOnSelect]="false" [clearable]="true" [items]="types"
-                    [multiple]="true" [notFoundText]="'Nenalezen žádný typ'" [searchable]="true"
-                    formControlName="excludedTypes"></ng-select>
+                    [multiple]="true" [notFoundText]="'Nenalezen žádný typ'" [searchable]="true" formControlName="ignoreTypes"></ng-select>
             </div>
         </div>
 
         <div class="row mt-3">
-            <div class="col-md-3 d-flex flex-column">
-                <app-checkbox [id]="'ignore-bots'" formControlName="ignoreBots" [label]="'Ignorovat operace provedené boty'"></app-checkbox>
-                <app-checkbox [id]="'only-from-start'" formControlName="onlyFromStart"
-                    [label]="'Pouze záznamy od startu bota'"></app-checkbox>
-            </div>
-
             <div class="col-md d-flex flex-column">
                 <app-checkbox [id]="'only-with-files'" formControlName="onlyWithFiles"
                     [label]="'Pouze záznamy obsahující soubory'"></app-checkbox>
