--- a/src/PrivateAdmin/src/app/administration/audit-log/list/list.component.html
+++ b/src/PrivateAdmin/src/app/administration/audit-log/list/list.component.html
@@ -30,7 +30,7 @@
 
         <div class="col-md-auto no-print">
             <div class="btn-group" role="group">
-                <button class="btn btn-outline-primary" *ngIf="item.isDetailAvailable" (click)="openDetail(item, false)"
+                <button class="btn btn-outline-primary" *ngIf="item.isDetailAvailable" (click)="openDetail(item)"
                     title="Zobrazit detail záznamu">
                     <i class="fas fa-info pe-1 ps-1"></i>
                 </button>
@@ -258,9 +258,9 @@
 
         <ng-container *ngIf="type === AuditLogItemType.GuildUpdated">
             <p>
-                Změměno:
+                Změněno:
                 <b>
-                    <span class="me-1" *ngIf="preview.afkChanelId">AFK kanál</span>
+                    <span class="me-1" *ngIf="preview.afkChannelId">AFK kanál</span>
                     <span class="me-1" *ngIf="preview.afkTimeout">AFK timeout</span>
                     <span class="me-1" *ngIf="preview.bannerId">Banner</span>
                     <span class="me-1" *ngIf="preview.defaultMessageNotifications">Výchozí upozornění</span>
@@ -273,7 +273,6 @@
                     <span class="me-1" *ngIf="preview.mfaLevel">2FA úroveň</span>
                     <span class="me-1" *ngIf="preview.name">Název</span>
                     <span class="me-1" *ngIf="preview.nsfwLevel">Úroveň NSFW</span>
-                    <span class="me-1" *ngIf="preview.ownerId">Vlastník</span>
                     <span class="me-1" *ngIf="preview.premiumTier">Úroveň (Boost)</span>
                     <span class="me-1" *ngIf="preview.publicUpdatesChannelId">Kanál na novinky</span>
                     <span class="me-1" *ngIf="preview.rulesChannelId">Kanál s pravidly</span>
