--- a/src/PrivateAdmin/src/app/administration/jobs/dashboard/dashboard.component.html
+++ b/src/PrivateAdmin/src/app/administration/jobs/dashboard/dashboard.component.html
@@ -25,7 +25,7 @@
             <div class="col-md">
                 <p>Počet spuštění: <b>{{job.startCount.toLocaleString()}}</b></p>
                 <p>Počet chyb: <b>{{job.failedCount.toLocaleString()}}</b></p>
-                <p>Posl. spuštění: <b>{{job.lastRun.binding}}</b></p>
+                <p>Posl. spuštění: <b>{{(job.lastRun ? job.lastRun.binding : 'Ještě nespuštěn')}}</b></p>
                 <p>Příští spuštění: <b>{{job.nextRun.binding}}</b></p>
             </div>
 
