Fixed field name in the execution filter

--- a/src/PrivateAdmin/src/app/administration/audit-log/filter/extended-filters/execution-filter/execution-filter.component.html
+++ b/src/PrivateAdmin/src/app/administration/audit-log/filter/extended-filters/execution-filter/execution-filter.component.html
@@ -14,7 +14,7 @@
             <div class="col-md-3 d-flex align-items-center">Dokončeno úspěšně</div>
 
             <div class="col-md">
-                <app-select [items]="wasSuccessItems" formControlName="wasSuccess"></app-select>
+                <app-select [items]="successItems" formControlName="success"></app-select>
             </div>
         </div>
 
