--- a/src/PrivateAdmin/src/app/administration/home-dashboard/common-info/common-info.component.html
+++ b/src/PrivateAdmin/src/app/administration/home-dashboard/common-info/common-info.component.html
@@ -1,29 +1,32 @@
 <app-card [header]="false">
     <p class="fw-bold d-inline me-3">Základní informace</p>
 
-    <app-loading *ngIf="loading; else view"></app-loading>
+    <app-loading *ngIf="dashboardInfoLoading; else view" [text]="'Načítání informací'"></app-loading>
     <ng-template #view>
-        <span class="badge bg-secondary original me-1" *ngIf="data.isDevelopment">Development</span>
-        <span class="badge bg-success original me-1" *ngIf="!data.isDevelopment">Production</span>
+        <span class="badge bg-secondary original me-1" *ngIf="dashboardInfo.isDevelopment">Development</span>
+        <span class="badge bg-success original me-1" *ngIf="!dashboardInfo.isDevelopment">Production</span>
         <span class="badge bg-{{connectionColor}} original me-1">{{connectionText}}</span>
-        <span class="badge bg-{{(data.isActive ? 'success' : 'danger')}} original cursor-ptr text-decoration-underline"
-            (click)="toggleState(!data.isActive)">{{(!data.isActive ? 'Neaktivní' : 'Aktivní')}}</span>
+        <span class="badge bg-{{(dashboardInfo.isActive ? 'success' : 'danger')}} original cursor-ptr text-decoration-underline"
+            (click)="toggleState(!dashboardInfo.isActive)">{{(!dashboardInfo.isActive ? 'Neaktivní' : 'Aktivní')}}</span>
         <div class="row mt-1">
-            <div keyValueItem class="col-md" [key]="'Čas na serveru'" [value]="data.currentDateTime.binding"></div>
-            <div keyValueItem class="col-md" [key]="'Bot spuštěn'" [value]="data.startAt.binding"></div>
-            <div keyValueItem class="col-md" [key]="'Uptime'" [value]="data.uptime | timeDuration"></div>
-            <div keyValueItem class="col-md" [key]="'Aktivní čas'" [value]="data.cpuTime | timeDuration"></div>
-            <div keyValueItem class="col-md" [key]="'Využitá paměť'" [value]="data.usedMemory | filesize"></div>
+            <div keyValueItem class="col-md" [key]="'Čas na serveru'" [value]="dashboardInfo.currentDateTime.binding"></div>
+            <div keyValueItem class="col-md" [key]="'Bot spuštěn'" [value]="dashboardInfo.startAt.binding"></div>
+            <div keyValueItem class="col-md" [key]="'Uptime'" [value]="dashboardInfo.uptime | timeDuration"></div>
+            <div keyValueItem class="col-md" [key]="'Aktivní čas'" [value]="dashboardInfo.cpuTime | timeDuration"></div>
+            <div keyValueItem class="col-md" [key]="'Využitá paměť'" [value]="dashboardInfo.usedMemory | filesize"></div>
         </div>
+    </ng-template>
 
-        <ng-container *ngIf="data.services.length > 0">
+    <app-loading *ngIf="dashboardServicesLoading; else servicesView" [text]="'Zjišťování dostupnosti služeb'"></app-loading>
+    <ng-template #servicesView>
+        <ng-container *ngIf="services && services.length > 0">
             <p class="fw-bold mt-3 mb-0">Služby</p>
             <div class="d-flex">
-                <a class="badge bg-{{service.isAvailable ? 'success' : 'danger'}} original text-white me-1"
-                    *ngFor="let service of data.services" routerLink="/admin/services/{{service.id}}">{{service.name}}</a>
+                <a class="badge bg-{{service.isAvailable ? 'success' : 'danger'}} original text-white me-1" *ngFor="let service of services"
+                    routerLink="/admin/services/{{service.id}}">{{service.name}}</a>
             </div>
         </ng-container>
-        <span class="text-danger" *ngIf="!data.services">
+        <span class="text-danger" *ngIf="!services">
             <i class="fas fa-exclamation-triangle me-1"></i> Nepodařilo se načíst informace o službách.
         </span>
     </ng-template>
