--- a/src/PrivateAdmin/src/app/administration/home-dashboard/today-avg-times/today-avg-times.component.html
+++ b/src/PrivateAdmin/src/app/administration/home-dashboard/today-avg-times/today-avg-times.component.html
@@ -3,16 +3,22 @@
 
     <app-loading *ngIf="loading; else view"></app-loading>
     <ng-template #view>
-        <span class="text-danger" *ngIf="!data.todayAvgTimes">
+        <span class="text-danger" *ngIf="!data">
             <i class="fas fa-exclamation-triangle me-1"></i> Nezdařilo se načíst dnešní statistiky.
         </span>
 
-        <ng-container *ngIf="data.todayAvgTimes">
-            <div *ngFor="let item of data.todayAvgTimes" class="d-flex justify-content-between border-bottom"
-                [class.text-warning]="item.value >= 5000">
-                <b>{{translateKey(item.key)}}</b>
-                <span>{{item.value | timeDuration}}</span>
-            </div>
+        <ng-container *ngIf="data">
+            <ng-container *ngTemplateOutlet="row;context:{name:'Privátní API', duration: data.privateApi}"></ng-container>
+            <ng-container *ngTemplateOutlet="row;context:{name:'Veřejné API', duration: data.publicApi}"></ng-container>
+            <ng-container *ngTemplateOutlet="row;context:{name:'Příkazy', duration: data.interactions}"></ng-container>
+            <ng-container *ngTemplateOutlet="row;context:{name:'Naplánované úlohy', duration: data.jobs}"></ng-container>
         </ng-container>
     </ng-template>
 </app-card>
+
+<ng-template #row let-name="name" let-duration="duration">
+    <div class="d-flex justify-content-between border-bottom" [class.text-warning]="duration >= 5000">
+        <b>{{name}}</b>
+        <span>{{duration | timeDuration}}</span>
+    </div>
+</ng-template>
